# demo_protobuf

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: PredictBonusResponse.proto
proto/common/: Decimal.proto
src/: dto.rs  main.rs
