[package]
name = "demo_protobuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.10.4"
prost-types = "0.10.1"
fpdec = "0.5.3"
fpdec-macros = "0.5.3"
base64 = "0.13.0"
bytes = "1.1"

[build-dependencies]
prost = "0.10.4"
prost-types = "0.10.1"
prost-build = { version = "0.10.4" }